<resources>
    <string name="app_name">MakeADifference</string>
    <string name="title_activity_feed">FeedActivity</string>s
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="prompt_password">Please enter your password.</string>
    <string name="btn_project1">Daily Drawing</string>
    <string name="btn_project2">GitFit</string>
    <string name="btn_project3">The Pursuit of Happyness</string>
    <string name="btn_project4">Phone a Friend</string>
    <string name="btn_project5">Cold Turkey</string>
    <string name="rank">Captain</string>
    <string name="pointValue">230</string>
    <string name="dashboard">Dashboard</string>
    <string-array name="time_array">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>4 hours</item>
        <item>5 hours</item>
        <item>6 hours</item>
        <item>7 hours</item>
        <item>8 hours</item>
        <item>9 hours</item>
        <item>10 hours</item>
        <item>11 hours</item>
        <item>12 hours</item>
        <item>13 hours</item>
        <item>14 hours</item>
        <item>15 hours</item>
        <item>16 hours</item>
        <item>17 hours</item>
        <item>18 hours</item>
        <item>19 hours</item>
        <item>20 hours</item>
    </string-array>
    <string name="start_prompt">Select</string>
</resources>
