<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bitsplease.makeadifference.DashboardActivity">

    <!--<Button-->
        <!--android:id="@+id/projectbutton1"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="118dp"-->
        <!--android:text="@string/btn_project1"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#fff"
        android:id="@+id/projectbutton1"
        android:layout_marginTop="118dp"
        android:text="@string/btn_project1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#fff"
        android:id="@+id/projectbutton2"
        android:layout_marginBottom="295dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:text="@string/btn_project2"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/projectbutton3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#fff"
        android:id="@+id/projectbutton3"
        android:layout_marginBottom="293dp"
        android:layout_marginEnd="11dp"
        android:layout_marginTop="67dp"
        android:text="@string/btn_project3"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/projectbutton2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#fff"
        android:id="@+id/projectbutton4"
        android:layout_marginStart="8dp"
        android:text="@string/btn_project4"
        app:layout_constraintEnd_toStartOf="@+id/projectbutton5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/projectbutton1" />

    <Button
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#fff"
        android:id="@+id/projectbutton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:text="@string/btn_project5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/projectbutton4"
        app:layout_constraintTop_toBottomOf="@+id/projectbutton1" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="279dp"
        android:layout_height="36dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <QuickContactBadge
        android:id="@+id/quickContactBadge"
        android:layout_width="104dp"
        android:layout_height="133dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="@+id/projectbutton1"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="56dp"
        android:layout_height="20dp"
        android:layout_marginBottom="83dp"
        android:layout_marginEnd="114dp"
        android:layout_marginStart="53dp"
        android:text="@string/rank"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/projectbutton2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="63dp"
        android:layout_height="23dp"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="49dp"
        android:text="@string/pointValue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/projectbutton3" />
</android.support.constraint.ConstraintLayout>
